# NER-CPP

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
AutoProcessor/Sentence/: SentenceAutoNER.cpp  SentenceAutoNER.h  TurkishSentenceAutoNER.h
include/: ArgumentType.h
src/: CMakeLists.txt
src/AutoProcessor/Sentence/: TurkishSentenceAutoNER.cpp
